# cv-evaluation-engine

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_GUIDELINES.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: evaluation.py  health.py  upload.py
app/core/analysis/: __init__.py  skills_extractor.py
app/core/llm/: __init__.py  llm_service.py
app/core/storage/: file_manager.py
app/core/text_extraction/: base.py  docx_extractor.py  extractor_factory.py  pdf_extractor.py  text_cleaner.py  txt_extractor.py
app/models/: file_types.py  health.py  upload.py
app/services/: __init__.py  cv_evaluation_service.py  file_validator.py  upload_service.py
data/: resume_musawer_muradi.docx
tests/: conftest.py
tests/integration/: test_complete_cv_analysis.py  test_evaluation_system.py
tests/unit/: test_health.py  test_llm_evaluation.py  test_skills_extraction.py  test_text_extraction.py  test_upload.py
