[project]
name = "llm-cv-evaluator"
version = "0.1.0"
description = "LLM-powered CV evaluation engine using Llama for intelligent analysis"
authors = [{name = "Musawer Muradi", email = "musavir.muradi@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Data Validation
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    # File Processing
    "python-multipart>=0.0.6",
    # Text Extraction
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    # LLM Integration
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    
    # Code Quality
    "black>=23.9.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Fixed: Explicitly specify which packages to include
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "data*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
